# japan-pr-navigator

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
knowledge/: documents.yaml  faq.yaml  hsp_points.yaml  offices.yaml  phases.yaml  tips.yaml
scripts/: setup.sh
src/japan_pr_mcp/: __init__.py  __main__.py  knowledge_base.py  server.py
src/japan_pr_mcp/resources/: knowledge.py
src/japan_pr_mcp/tools/: documents.py  hsp_points.py  linkedin.py  offices.py  phases.py  requirements.py
tests/: conftest.py  test_knowledge_base.py  test_resources.py  test_server_integration.py  test_tools_documents.py  test_tools_hsp.py  test_tools_linkedin.py  test_tools_offices.py  test_tools_phases.py  test_tools_requirements.py
